move notification led color to notification preferences submenu

--- a/surespot/src/main/res/xml/preferences.xml
+++ b/surespot/src/main/res/xml/preferences.xml
@@ -43,14 +43,6 @@
             android:key="pref_background_image"
             android:title="@string/pref_title_background_image_select"/>
 
-        <net.margaritov.preference.colorpicker.ColorPickerPreference
-            alphaSlider="false"
-            android:defaultValue="@color/surespotBlue"
-            android:key="pref_notification_color"
-            android:summary="@string/pref_summary_notification_color"
-            android:title="@string/pref_title_notification_color"
-            />
-
         <PreferenceScreen android:title="@string/notifications_title">
             <CheckBoxPreference
                 android:defaultValue="true"
@@ -73,6 +65,12 @@
                 android:dependency="pref_notifications_enabled"
                 android:key="pref_notifications_led"
                 android:title="@string/notifications_led"/>
+            <net.margaritov.preference.colorpicker.ColorPickerPreference
+                alphaSlider="false"
+                android:defaultValue="@color/surespotBlue"
+                android:key="pref_notification_color"
+                android:summary="@string/pref_summary_notification_color"
+                android:title="@string/pref_title_notification_color"/>
         </PreferenceScreen>
 
         <CheckBoxPreference
