don't use fullscreen mode for landscape keyboard to fix back going to invite screen RM#834

--- a/surespot/src/main/res/layout/main_view.xml
+++ b/surespot/src/main/res/layout/main_view.xml
@@ -69,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:imeActionLabel="@string/invite"
-            android:imeOptions="actionDone"
+            android:imeOptions="actionDone|flagNoExtractUi"
             android:inputType="textNoSuggestions|textVisiblePassword"
             android:maxHeight="150dp"
             android:minHeight="45dp"
@@ -81,7 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:imeActionLabel="@string/send"
-            android:imeOptions="actionSend"
+            android:imeOptions="actionSend|flagNoExtractUi"
             android:inputType="textMultiLine|textCapSentences"
             android:maxHeight="150dp"
             android:maxLines="5"
