--- a/surespot/src/main/res/values/tags.xml
+++ b/surespot/src/main/res/values/tags.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="tagMessage" type="id">0</item>
     <item name="tagDownloader" type="id">1</item>
+    <item name="tagGifDownloader" type="id">2</item>
 </resources>
