--- a/surespot/src/main/res/layout/message_list_item_us.xml
+++ b/surespot/src/main/res/layout/message_list_item_us.xml
@@ -106,6 +106,18 @@
             android:adjustViewBounds="false"
             android:scaleType="centerCrop"
             android:visibility="gone" />
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/messageGif"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="left"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2sp"
+            android:adjustViewBounds="false"
+            android:scaleType="centerCrop"
+            android:visibility="gone" />
+
 
         <LinearLayout
             android:id="@+id/messageVoice"
