--- a/surespot/src/main/res/layout/message_list_item_them.xml
+++ b/surespot/src/main/res/layout/message_list_item_them.xml
@@ -95,8 +95,8 @@
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
-            android:adjustViewBounds="false"
-            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
             android:visibility="gone" />
 
 
