--- a/surespot/src/main/res/layout/message_list_item_us.xml
+++ b/surespot/src/main/res/layout/message_list_item_us.xml
@@ -103,8 +103,8 @@
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2sp"
-            android:adjustViewBounds="false"
-            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
             android:visibility="gone" />
 
         <LinearLayout
