--- a/surespot/src/main/res/layout/fragment_gifsearch.xml
+++ b/surespot/src/main/res/layout/fragment_gifsearch.xml
@@ -13,38 +13,70 @@
         android:background="?android:attr/colorBackground"
         android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvGifs"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="?android:attr/colorBackground"
-            android:orientation="horizontal"
-            />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+            <ImageView
+                android:id="@+id/ivGifClose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:src="@android:drawable/ic_menu_close_clear_cancel"/>
+
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignBottom="@id/ivGifClose"
+                android:layout_alignTop="@id/ivGifClose"
+
+                android:gravity="center"
+                android:text="@string/powered_by_giphy"/>
+
+
+        </RelativeLayout>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvGifKeywords"
+            android:id="@+id/rvGifs"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:background="?android:attr/colorBackground"
             android:orientation="horizontal"
             />
 
+        <android.support.v7.widget.RecyclerView
+            android:layout_margin="20dp"
+            android:id="@+id/rvGifKeywords"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="?android:attr/colorBackground"
+            android:orientation="horizontal"
+            />
+
         <EditText
+            android:id="@+id/etGifSearch"
+            android:layout_margin="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?android:attr/colorBackground"
-            android:imeOptions="actionSearch"
+            android:imeOptions="actionSearch|flagNoExtractUi"
             android:inputType="text"
+            android:hint="@string/search_gifs"
+
             android:lines="0"/>
 
     </LinearLayout>
 
     <View
+
         android:id="@+id/topFrame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/bottomFrame"
         android:layout_alignParentTop="true"
-        android:background="#CC000000"
+        android:background="#55000000"
         android:clickable="true"/>
 </com.twofours.surespot.gifs.GifSearchFragment>
