--- a/surespot/src/main/res/layout/gif_search_view.xml
+++ b/surespot/src/main/res/layout/gif_search_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.twofours.surespot.gifs.GifSearchFragment xmlns:android="http://schemas.android.com/apk/res/android"
-                                              android:layout_width="match_parent"
-                                              android:layout_height="match_parent"
+<com.twofours.surespot.gifs.GifSearchView xmlns:android="http://schemas.android.com/apk/res/android"
+                                          android:layout_width="match_parent"
+                                          android:layout_height="match_parent"
     >
 
 
@@ -51,7 +51,8 @@
             android:layout_margin="20dp"
             android:id="@+id/rvGifKeywords"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="0dp"
+            android:layout_weight="2"
             android:background="?android:attr/colorBackground"
             android:orientation="horizontal"
             />
@@ -60,7 +61,7 @@
             android:id="@+id/etGifSearch"
             android:layout_margin="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="?android:attr/colorBackground"
             android:imeOptions="actionSearch|flagNoExtractUi"
             android:inputType="text"
@@ -79,4 +80,4 @@
         android:layout_alignParentTop="true"
         android:background="#55000000"
         android:clickable="true"/>
-</com.twofours.surespot.gifs.GifSearchFragment>
+</com.twofours.surespot.gifs.GifSearchView>
