--- a/surespot/src/main/res/layout/gif_search_view.xml
+++ b/surespot/src/main/res/layout/gif_search_view.xml
@@ -1,110 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.twofours.surespot.gifs.GifSearchView xmlns:android="http://schemas.android.com/apk/res/android"
+                                          android:id="@+id/gifSearchView"
                                           android:layout_width="match_parent"
                                           android:layout_height="match_parent"
+                                          android:background="?android:attr/colorBackground"
     >
 
 
-    <LinearLayout
-        android:id="@+id/bottomFrame"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="?android:attr/colorBackground"
-        android:orientation="vertical">
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                 android:id="@+id/gifFrame"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_alignParentTop="true">
 
-        <RelativeLayout
+        <ProgressBar
+            android:id="@+id/gif_progress_bar"
+            style="?android:progressBarStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
-            <ImageView
-                android:id="@+id/ivGifClose"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:src="@android:drawable/ic_menu_close_clear_cancel"/>
-
-            <!--<TextView-->
-
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_alignBottom="@id/ivGifClose"-->
-            <!--android:layout_alignTop="@id/ivGifClose"-->
-
-            <!--android:gravity="center"-->
-            <!--android:text="@string/powered_by_giphy"/>-->
-
-
-        </RelativeLayout>
-
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content">
-
-            <ProgressBar
-                android:id="@+id/gif_progress_bar"
-                style="?android:progressBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:visibility="gone"
-                />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rvGifs"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:orientation="horizontal"
-
-                />
-
-            <TextView
-                android:id="@+id/tv_no_gifs"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/no_GIFS_found"
-                android:visibility="gone"
-                />
-
-
-        </FrameLayout>
-
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvGifKeywords"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="20dp"
-            android:layout_weight="1"
-            android:background="?android:attr/colorBackground"
-            android:orientation="horizontal"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:visibility="gone"
             />
 
-        <EditText
-            android:id="@+id/etGifSearch"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvGifs"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:orientation="horizontal"
+
+            />
+
+        <TextView
+            android:id="@+id/tv_no_gifs"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:background="?android:attr/colorBackground"
             android:gravity="center"
-            android:hint="@string/search_gifs"
-            android:imeOptions="actionSearch|flagNoExtractUi"
-            android:inputType="text"
+            android:text="@string/no_GIFS_found"
+            android:visibility="gone"
+            />
 
-            android:lines="0"/>
 
-    </LinearLayout>
+    </FrameLayout>
 
-    <!--<View-->
 
-        <!--android:id="@+id/topFrame"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_above="@id/bottomFrame"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:background="#66000000"-->
-        <!--android:clickable="true"/>-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvGifKeywords"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/gifFrame"
+        android:layout_margin="20dp"
+        android:orientation="horizontal"
+        />
+
 </com.twofours.surespot.gifs.GifSearchView>
