--- a/surespot/src/main/res/layout/gif_search_view.xml
+++ b/surespot/src/main/res/layout/gif_search_view.xml
@@ -10,14 +10,14 @@
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/gifFrame"
                  android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
+                 android:layout_height="150dp"
                  android:layout_alignParentTop="true">
 
         <ProgressBar
             android:id="@+id/gif_progress_bar"
             style="?android:progressBarStyle"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:visibility="gone"
             />
