rudimentary file message display

--- a/surespot/src/main/res/layout/message_list_item_them.xml
+++ b/surespot/src/main/res/layout/message_list_item_them.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
-    android:descendantFocusability="blocksDescendants"
-    android:gravity="left"
-    android:orientation="horizontal">
+              xmlns:emojicon="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:descendantFocusability="blocksDescendants"
+              android:gravity="left"
+              android:orientation="horizontal">
 
     <!-- <TextView -->
     <!-- android:id="@+id/messageUser" -->
@@ -23,18 +23,18 @@
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="50dp"
         android:background="@color/surespotBlue"
-        android:visibility="visible" >
+        android:visibility="visible">
     </View>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical" >
+            android:gravity="center_vertical">
 
             <ImageView
                 android:id="@+id/messageImageShareable"
@@ -43,7 +43,7 @@
                 android:layout_marginBottom="1dp"
                 android:layout_marginTop="1dp"
                 android:src="@drawable/ic_partial_secure"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
             <ImageView
                 android:id="@+id/messageImageNotShareable"
@@ -52,7 +52,7 @@
                 android:layout_marginBottom="1dp"
                 android:layout_marginTop="1dp"
                 android:src="@drawable/ic_secure"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/messageTime"
@@ -61,7 +61,7 @@
                 android:layout_marginLeft="7dp"
                 android:layout_marginRight="2dp"
                 android:textSize="10sp"
-                android:visibility="visible" />
+                android:visibility="visible"/>
 
             <TextView
                 android:id="@+id/messageSize"
@@ -70,21 +70,21 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:textSize="10sp" />
+                android:textSize="10sp"/>
         </LinearLayout>
 
         <com.rockerhieu.emojicon.EmojiconTextView
             android:id="@+id/messageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
             android:layout_marginBottom="4dp"
             android:layout_marginLeft="7dp"
             android:layout_marginRight="55dp"
-            emojicon:emojiconSize="30dp"
+            android:layout_marginTop="2dp"
             android:autoLink="all"
             android:textSize="16sp"
-            android:visibility="gone" >
+            android:visibility="gone"
+            emojicon:emojiconSize="30dp">
         </com.rockerhieu.emojicon.EmojiconTextView>
 
         <pl.droidsonroids.gif.GifImageView
@@ -97,8 +97,7 @@
             android:layout_marginRight="2dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
-            android:visibility="gone" />
-
+            android:visibility="gone"/>
 
 
         <LinearLayout
@@ -109,15 +108,16 @@
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2sp"
             android:orientation="horizontal"
-            android:visibility="gone" >
+            android:visibility="gone">
+
             <ImageView
                 android:id="@+id/voicePlay"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="false"                
+                android:adjustViewBounds="false"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_media_played" />
-            
+                android:src="@drawable/ic_media_played"/>
+
 
             <ImageView
                 android:id="@+id/voicePlayed"
@@ -125,7 +125,7 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="false"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_media_play" />
+                android:src="@drawable/ic_media_play"/>
 
             <ImageView
                 android:id="@+id/voiceStop"
@@ -134,15 +134,52 @@
                 android:adjustViewBounds="false"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_media_previous"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
             <SeekBar
                 android:id="@+id/seekBarVoice"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:enabled="false" />
+                android:enabled="false"/>
         </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/fileLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/fileFilename"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+            <TextView
+                android:id="@+id/fileSize"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/fileFilename"
+                />
+
+            <Button
+                android:id="@+id/fileDownload"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/fileFilename"
+                android:text="Download"/>
+
+            <Button
+                android:id="@+id/fileOpen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/fileFilename"
+                android:layout_toRightOf="@id/fileDownload"
+                android:layout_toEndOf="@id/fileDownload"
+                android:text="Open"/>
+
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/messageMimeType"
@@ -153,7 +190,7 @@
             android:layout_marginRight="55dp"
             android:autoLink="all"
             android:textSize="16sp"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/messageId"
@@ -164,7 +201,7 @@
             android:layout_marginRight="55dp"
             android:autoLink="all"
             android:textSize="16sp"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/messageToVersion"
@@ -175,7 +212,7 @@
             android:layout_marginRight="55dp"
             android:autoLink="all"
             android:textSize="16sp"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/messageFromVersion"
@@ -186,7 +223,7 @@
             android:layout_marginRight="55dp"
             android:autoLink="all"
             android:textSize="16sp"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/messageIv"
@@ -197,7 +234,7 @@
             android:layout_marginRight="55dp"
             android:autoLink="all"
             android:textSize="16sp"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/messageData"
@@ -208,7 +245,7 @@
             android:layout_marginRight="55dp"
             android:autoLink="all"
             android:textSize="16sp"
-            android:visibility="gone" />
+            android:visibility="gone"/>
     </LinearLayout>
 
 </LinearLayout>
