--- a/surespot/src/main/res/menu/activity_main.xml
+++ b/surespot/src/main/res/menu/activity_main.xml
@@ -19,6 +19,10 @@
                 android:id="@+id/menu_send_file_bar"
                 android:icon="@android:drawable/ic_menu_send"
                 android:title="@string/send_file"/>
+            <!--<item-->
+                <!--android:id="@+id/menu_mute_bar"-->
+                <!--android:icon="@drawable/ic_volume_off_white_36dp"-->
+                <!--android:title="@string/mute"/>-->
             <item
                 android:id="@+id/menu_close_bar"
                 android:icon="@drawable/ic_menu_end_conversation"
